--- a/WebViewBrowser/app/src/main/res/drawable/ic_launcher_round.xml
+++ b/WebViewBrowser/app/src/main/res/drawable/ic_launcher_round.xml
@@ -1,31 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
-    <background android:drawable="@color/primary"/>
-    <foreground>
-        <vector
-            android:width="108dp"
-            android:height="108dp"
-            android:viewportWidth="108"
-            android:viewportHeight="108"
-            android:tint="@color/white">
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M17,40v28h74V40H17zM83,64H19V42h64V64z"/>
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M32,44h8v4h-8z"/>
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M44,44h8v4h-8z"/>
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M56,44h16v4h-16z"/>
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M32,52h48v4h-48z"/>
-            <path
-                android:fillColor="@color/white"
-                android:pathData="M32,60h16v4h-16z"/>
-        </vector>
-    </foreground>
-</adaptive-icon>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108"
+    android:tint="@color/primary">
+    <path
+        android:fillColor="@color/white"
+        android:pathData="M54,26C38.5,26 26,38.5 26,54s12.5,28 28,28s28,-12.5 28,-28S69.5,26 54,26zM54,78c-13.25,0 -24,-10.75 -24,-24s10.75,-24 24,-24s24,10.75 24,24S67.25,78 54,78z"/>
+    <path
+        android:fillColor="@color/white"
+        android:pathData="M50,48h8v16h-8z"/>
+    <path
+        android:fillColor="@color/white"
+        android:pathData="M42,52h24v8h-24z"/>
+</vector>
