--- a/WebViewBrowser/app/src/main/res/layout/dialog_credentials.xml
+++ b/WebViewBrowser/app/src/main/res/layout/dialog_credentials.xml
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/save_credentials"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/primary" />
 
     </LinearLayout>
 
