--- a/WebViewBrowser/app/src/main/res/menu/menu_browser.xml
+++ b/WebViewBrowser/app/src/main/res/menu/menu_browser.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <item
+        android:id="@+id/action_favorites"
+        android:orderInCategory="50"
+        android:title="@string/action_favorites"
+        app:showAsAction="never" />
+    
+    <item
         android:id="@+id/action_view_source"
         android:orderInCategory="100"
         android:title="@string/action_view_source"
