--- a/WebViewBrowser/app/src/main/res/layout/activity_browser.xml
+++ b/WebViewBrowser/app/src/main/res/layout/activity_browser.xml
@@ -72,6 +72,7 @@
 
         <!-- WebView Container -->
         <FrameLayout
+            android:id="@+id/web_view_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
